--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: "Maths, CS & AI Compendium"
+site_url: "https://henryndubuaku.github.io/maths-cs-ai-compendium/"
 site_description: "An open, intuition-first textbook covering mathematics, computer science, and artificial intelligence from the ground up."
 site_author: "Henry Ndubuaku"
 repo_url: "https://github.com/HenryNdubuaku/maths-cs-ai-compendium"
